fix mobile overlap on projects page, add photo on contact page

--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,9 @@
   /* Assuming you want to maintain the 5% margin from each side */
 }
 
-.experience-page {
-  margin-top: 5vh; /* Adjust the value to increase or decrease the gap */
-  /* Assuming you want to maintain the 5% margin from each side */
-}
-
-.projects-page {
+.experience-page,
+.projects-page,
+.contact-me-page {
   margin-top: 5vh; /* Adjust the value to increase or decrease the gap */
   /* Assuming you want to maintain the 5% margin from each side */
 }
@@ -22,7 +19,9 @@
 /* Media Query for Ultrawide Screens */
 @media (min-width: 1920px) {
   .about-page,
-  .experience-page {
+  .experience-page,
+  .projects-page,
+  .contact-me-page {
     width: 70%; /* Adjust the width to a suitable percentage or fixed width */
   }
 }
